// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render _override props 1`] = `
<div>
  <div
    class="components-component test-component emotion-0 emotion-1"
    data-fin-c16t="true"
    data-fin-component="Component"
  >
    Code is Poetry
  </div>
</div>
`;

exports[`props should render context props 1`] = `
<div>
  <div
    class="components-component emotion-0 emotion-1"
    data-fin-c16t="true"
    data-fin-component="Component"
  >
    Code is Poetry
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div>
  <div
    class="components-component emotion-0 emotion-1"
    data-fin-c16t="true"
    data-fin-component="Component"
  />
</div>
`;
